--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "ember": "~1.4.0",
     "moment": "~2.5.1",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "ember-data": "1.0.0-beta.7"
   }
 }
