--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "thyme",
   "dependencies": {
-    "ember": "~1.4.0",
     "moment": "~2.5.1",
     "font-awesome": "~4.0.3",
-    "ember-data": "1.0.0-beta.7"
+    "knockoutjs": "~3.2.0",
+    "jquery": "~2.1.3",
+    "lodash": "~3.0.1"
   }
 }
