--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "font-awesome": "~4.0.3",
     "knockoutjs": "~3.2.0",
     "jquery": "~2.1.3",
-    "lodash": "~3.0.1"
+    "lodash": "~3.0.1",
+    "sammy": "~0.7.6"
   }
 }
