--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "knockoutjs": "~3.2.0",
     "jquery": "~2.1.3",
     "lodash": "~3.0.1",
-    "sammy": "~0.7.6"
+    "sammy": "~0.7.6",
+    "leaflet": "~0.7.3"
   }
 }
